@@ -142,12 +142,6 @@
     , "RL_BLEND_COLOR" : "0x8005"
     , "RL_READ_FRAMEBUFFER" : "0x8CA8"
     , "RL_DRAW_FRAMEBUFFER" : "0x8CA9"
-    , "RL_DEFAULT_SHADER_ATTRIB_LOCATION_POSITION" : "0"
-    , "RL_DEFAULT_SHADER_ATTRIB_LOCATION_TEXCOORD" : "1"
-    , "RL_DEFAULT_SHADER_ATTRIB_LOCATION_NORMAL" : "2"
-    , "RL_DEFAULT_SHADER_ATTRIB_LOCATION_COLOR" : "3"
-    , "RL_DEFAULT_SHADER_ATTRIB_LOCATION_TANGENT" : "4"
-    , "RL_DEFAULT_SHADER_ATTRIB_LOCATION_TEXCOORD2" : "5"
     , "RL_SHADER_LOC_MAP_DIFFUSE" : null
     , "RL_SHADER_LOC_MAP_SPECULAR" : null
     , "CONFIG_H" : null
@@ -180,6 +174,12 @@
     , "MAX_CHAR_PRESSED_QUEUE" : "16"
     , "MAX_DECOMPRESSION_SIZE" : "64"
     , "MAX_AUTOMATION_EVENTS" : "16384"
+    , "RL_DEFAULT_SHADER_ATTRIB_LOCATION_POSITION" : "0"
+    , "RL_DEFAULT_SHADER_ATTRIB_LOCATION_TEXCOORD" : "1"
+    , "RL_DEFAULT_SHADER_ATTRIB_LOCATION_NORMAL" : "2"
+    , "RL_DEFAULT_SHADER_ATTRIB_LOCATION_COLOR" : "3"
+    , "RL_DEFAULT_SHADER_ATTRIB_LOCATION_TANGENT" : "4"
+    , "RL_DEFAULT_SHADER_ATTRIB_LOCATION_TEXCOORD2" : "5"
     , "RL_DEFAULT_SHADER_ATTRIB_NAME_POSITION" : "\"vertexPosition\""
     , "RL_DEFAULT_SHADER_ATTRIB_NAME_TEXCOORD" : "\"vertexTexCoord\""
     , "RL_DEFAULT_SHADER_ATTRIB_NAME_NORMAL" : "\"vertexNormal\""
@@ -206,6 +206,7 @@
     , "SUPPORT_IMAGE_MANIPULATION" : "1"
     , "SUPPORT_DEFAULT_FONT" : "1"
     , "SUPPORT_FILEFORMAT_TTF" : "1"
+    , "SUPPORT_FILEFORMAT_FNT" : "1"
     , "SUPPORT_TEXT_MANIPULATION" : "1"
     , "SUPPORT_FONT_ATLAS_WHITE_REC" : "1"
     , "MAX_TEXT_BUFFER_LENGTH" : "1024"
